syntax = "proto3";
package lumera.action;

option go_package = "github.com/LumeraProtocol/lumera/x/action/types";

import "gogoproto/gogo.proto";

enum ActionState {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  ACTION_STATE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "ActionStateUnspecified"];
  ACTION_STATE_PENDING = 1 [(gogoproto.enumvalue_customname) = "ActionStatePending"];
  ACTION_STATE_DONE = 2 [(gogoproto.enumvalue_customname) = "ActionStateDone"];
  ACTION_STATE_APPROVED = 3 [(gogoproto.enumvalue_customname) = "ActionStateApproved"];
  ACTION_STATE_REJECTED = 4 [(gogoproto.enumvalue_customname) = "ActionStateRejected"];
  ACTION_STATE_FAILED = 5 [(gogoproto.enumvalue_customname) = "ActionStateFailed"];
}

