syntax = "proto3";

package lumera.action;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "lumera/action/params.proto";

option go_package = "github.com/LumeraProtocol/lumera/x/action/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams   (MsgUpdateParams  ) returns (MsgUpdateParamsResponse  );
  rpc RequestAction  (MsgRequestAction ) returns (MsgRequestActionResponse );
  rpc FinalizeAction (MsgFinalizeAction) returns (MsgFinalizeActionResponse);
  rpc ApproveAction  (MsgApproveAction ) returns (MsgApproveActionResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                       "authority";
  option           (amino.name) = "lumera/x/action/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgRequestAction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator       = 1;
  string actionType    = 2;
  string metadata      = 3;
  string price         = 4;
  string expirationTime = 5;
}

message MsgRequestActionResponse {
  string actionId = 1;
  string status = 2;
}

message MsgFinalizeAction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator  = 1; // must be supernode address
  string actionId   = 2;
  string actionType = 3;
  string metadata   = 4;
}

message MsgFinalizeActionResponse {}

message MsgApproveAction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator   = 1;
  string actionId  = 2;
}

message MsgApproveActionResponse {}

